<resources>
    <string name="app_name">My Application</string>
    <string name="barra_de_bocados_aviso">Aviso</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="central_point_menu_convocatorias">Convocatorias</string>
    <string name="central_point_menu_administracion">Administración</string>
    <string name="central_point_menu_accidentes">Accidentes</string>
    <string name="central_point_menu_configuracion">Configuración</string>
    <string name="crear_convocatoria_fecha_incorrecta">La fecha es incorrecta</string>
    <string name="crear_convocatoria_hora_incorrecta">La hora es incorrecta</string>
    <string name="crear_convocatoria_datos_incorrectos">Debe llenar todos los datos</string>
    <string name="crear_convocatoria_sitio_en_construccion">Sitio en construcción :)</string>
    <string name="crear_convocatoria_error_pdf">No se guardó a PDF</string>
    <string name="crear_convocatoria_archivo_creado">Archivo creado n.n</string>
    <string name="dialogo_entrada_texto_cancelar">Cancelar</string>
    <string name="dialogo_entrada_texto_aceptar">Aceptar</string>
    <string name="dialogo_entrada_texto_modificar_texto">Modifique el elemento</string>
    <string name="dialogo_entrada_texto_agregar_texto">Agregue elemento</string>
    <string name="dialogo_informacion_confirmar_salida">¿Está seguro de salir? Se perderán los datos al moemento (sistema de borrador en contrucción)</string>
    <string name="dialogo_remocion_elementos_titulo">Seleccione elementos a remover</string>
    <string name="nuevo_condominio_direccion">Dirección</string>
    <string name="nuevo_condominio_edad">Antigüedad</string>
    <string name="nuevo_condominio_inmoviliaria">Inmobiliaria</string>
    <string name="nuevo_condominio_tipo_de_condominio">Tipo de Condominio</string>
    <string name="nuevo_condominio_nombre_del_condominio">Nombre del condominio</string>
    <string name="nuevo_condominio_siguiente">Siguiente</string>
    <string name="nuevo_condominio_cantidad_de_lugares_estacionamiento"># Cajones de estacionamiento</string>
    <string name="nuevo_condominio_costo_aprox_por_unidad_privativa">Costo aprox por unidad privativa</string>
    <string name="nuevo_condominio_capacidad_de_cisterna">Capacidad de cisterna en litros</string>
    <string name="nuevo_condominio_hecho">Listo</string>
    <string name="signup_usuario">Nombres</string>
    <string name="signup_ap_paterno">Apellido paterno</string>
    <string name="signup_ap_materno">Apellido materno</string>
    <string name="signup_escolaridad">Escolaridad</string>
    <string name="signup_tipo_de_administrador">Tipo de administrador</string>
    <string name="signup_remuneracion">Remuneración</string>
    <string name="startup_email">E-mail</string>
    <string name="signup_date_of_birth">Fecha de nacimiento</string>
    <string name="signup_registrar">Registrar</string>
    <string name="startup_pass">Contraseña</string>
    <string name="signup_pista_password">La contraseña debe tener al menos 5 caracteres, incluir una mayúscula, un número y un caracter no alfanumérico: !@#$&amp;*</string>
    <string name="signup_contacto">Teléfono</string>
    <string name="signup_habilitar_profesion">Cuento con profesión</string>
    <string name="signup_profesion">Profesión</string>
    <string name="formulario_torre_nombre">Nombre de la torre</string>
    <string name="formulario_torre_cantidad_de_pisos">Cantidad de pisos</string>
    <string name="formulario_torre_cantidad_De_focos">Cantidad de focos</string>
    <string name="formulario_torre_cantidad_De_departamentos">Cantidad de departamentos</string>
    <string name="formulario_torre_posee_elevador">Cuenta con elevador </string>
    <string name="formulario_torre_hecho">Hecho</string>
    <string name="consulta_condominio_instrucciones">Puede formar parte de la administración de su condominio proporcionando el código de registro</string>
    <string name="consulta_condominio_hint_direccion_de_condominio">Código de registro</string>
    <string name="consulta_condominio_texto_boton_consulta">Unirse</string>
    <string name="consulta_condominio_texto_boton_nuevo_registro">Registrar</string>
    <string name="consulta_condominio_texto_saludo">Hola</string>
    <string name="menu_habitantes_nuevo_habitante">Nuevo habitante</string>
    <string name="menu_habitantes_remover_habitante">Remover habitante</string>
    <string name="menu_habitantes_filtrar_habitantes">Torres</string>
    <string name="resumen_condominio_etiqueta_antiguedad">Antigüedad:</string>
    <string name="resumen_condominio_antiguedad_tail">años</string>
    <string name="resumen_condominio_etiqueta_inmoviliaria">Inmoviliaria:</string>
    <string name="resumen_condominio_posee_sala_de_juntas">posee sala de juntas</string>
    <string name="resumen_condominio_posee_gym">posee gym</string>
    <string name="resumen_condominio_posee_espacio_recreativo">posee espacio recreativo</string>
    <string name="resumen_condominio_posee_espacio_cultural">posee espacio cultural</string>
    <string name="resumen_condominio_posee_oficinas_administrativas">posee oficinas administrativas</string>
    <string name="resumen_condominio_posee_alarma_sismica">posee alarma sísmica</string>
    <string name="resumen_condominio_cantidad_cajones_estacionamiento">Cajones de \nestacionamiento:</string>
    <string name="resumen_condominio_cantidad_lugares_estacionamiento_tail">cajones</string>
    <string name="resumen_condominio_cantidad_de_lugares_estacionamiento_visitas">Cajones para visitas:</string>
    <string name="resumen_condominio_cantidad_lugares_estacionamiento_visitas_tail">cajones</string>
    <string name="resumen_condominio_posee_cisterna_agua_pluvial">posee cisterna agua pluvial</string>
    <string name="resumen_condominio_costo_aprox_por_unidad_privativa">Costo aprox. por \nunidad privativa:</string>
    <string name="resumen_condominio_costo_aprox_por_unidad_privativa_tail">pesos</string>
    <string name="resumen_condominio_etiqueta_capacidad_cisterna">Capacidad \nde la cisterna:</string>
    <string name="resumen_condominio_capacidad_cisterna_tail">litros</string>
</resources>