<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/buscar_habitante"
        android:title="@string/menu_habitantes_nuevo_habitante"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/agregar_habitante"
        android:title="@string/menu_habitantes_nuevo_habitante"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/remover_habitante"
        android:title="@string/menu_habitantes_remover_habitante"
        android:icon="@drawable/ic_remove_circle_outline_white_24dp"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/torres"
        android:title="@string/menu_habitantes_filtrar_habitantes"
        app:showAsAction="collapseActionView"/>
</menu>