<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        style="@style/MyEditText"
        android:id="@+id/formulario_torre_nombre"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:hint="@string/formulario_torre_nombre"/>
    <TextView
        style="@style/MyTextView"
        android:id="@+id/formulario_torre_piso_nombre"
        android:layout_below="@+id/formulario_torre_nombre"
        android:layout_alignStart="@+id/formulario_torre_nombre"
        android:layout_alignLeft="@+id/formulario_torre_nombre"
        android:layout_alignRight="@+id/formulario_torre_nombre"
        android:layout_alignEnd="@+id/formulario_torre_nombre"/>

    <EditText
        style="@style/MyEditText"
        android:id="@+id/formulario_torre_cantidad_de_pisos"
        android:layout_below="@+id/formulario_torre_nombre"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:hint="@string/formulario_torre_cantidad_de_pisos"/>
    <TextView
        style="@style/MyTextView"
        android:id="@+id/formulario_torre_piso_cantidad_de_pisos"
        android:layout_below="@+id/formulario_torre_cantidad_de_pisos"
        android:layout_alignStart="@+id/formulario_torre_cantidad_de_pisos"
        android:layout_alignLeft="@+id/formulario_torre_cantidad_de_pisos"
        android:layout_alignRight="@+id/formulario_torre_cantidad_de_pisos"
        android:layout_alignEnd="@+id/formulario_torre_cantidad_de_pisos"/>

    <EditText
        style="@style/MyEditText"
        android:id="@+id/formulario_torre_cantidad_de_focos"
        android:layout_below="@+id/formulario_torre_cantidad_de_pisos"
        android:inputType="number"
        android:hint="@string/formulario_torre_cantidad_De_focos"
        android:imeOptions="actionNext"/>
    <TextView
        style="@style/MyTextView"
        android:id="@+id/formulario_torre_piso_cantidad_de_focos"
        android:layout_below="@+id/formulario_torre_cantidad_de_focos"
        android:layout_alignStart="@+id/formulario_torre_cantidad_de_focos"
        android:layout_alignLeft="@+id/formulario_torre_cantidad_de_focos"
        android:layout_alignEnd="@+id/formulario_torre_cantidad_de_focos"
        android:layout_alignRight="@+id/formulario_torre_cantidad_de_focos"/>

    <EditText
        style="@style/MyEditText"
        android:id="@+id/formulario_torre_cantidad_de_departamentos"
        android:layout_below="@+id/formulario_torre_cantidad_de_focos"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:hint="@string/formulario_torre_cantidad_De_departamentos"/>
    <TextView
        style="@style/MyTextView"
        android:id="@+id/formulario_torre_piso_cantidad_de_departamentos"
        android:layout_below="@+id/formulario_torre_cantidad_de_departamentos"
        android:layout_alignLeft="@+id/formulario_torre_cantidad_de_departamentos"
        android:layout_alignStart="@+id/formulario_torre_cantidad_de_departamentos"
        android:layout_alignEnd="@+id/formulario_torre_cantidad_de_departamentos"
        android:layout_alignRight="@+id/formulario_torre_cantidad_de_departamentos"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/formulario_torre_posee_elevador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formulario_torre_cantidad_de_departamentos"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="12sp"
        android:layout_marginRight="12sp"
        android:text="@string/formulario_torre_posee_elevador"
        android:textSize="16sp"/>

    <Button
        style="@style/MyButtonCustom"
        android:id="@+id/formulario_torre_hecho"
        android:layout_below="@+id/formulario_torre_posee_elevador"
        android:text="@string/formulario_torre_hecho"/>

</RelativeLayout>