<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.inspira.condominio.admin.condominio.EstadoDeCondominio"
    tools:showIn="@layout/activity_scrolling_resumen_condominio">

    <TextView
        android:id="@+id/resumen_condominio_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginEnd="12sp"
        android:layout_marginRight="12sp"
        android:textSize="34sp"/>
    <TextView
        android:id="@+id/resumen_condominio_direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/resumen_condominio_nombre"
        android:layout_alignRight="@+id/resumen_condominio_nombre"
        android:layout_below="@+id/resumen_condominio_nombre"
        android:layout_marginTop="12sp"/>
    <TextView
        android:id="@+id/resumen_condominio_tipo_de_condominio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/resumen_condominio_nombre"
        android:layout_alignLeft="@+id/resumen_condominio_nombre"
        android:layout_below="@+id/resumen_condominio_direccion"
        android:layout_marginTop="12sp"
        android:textStyle="bold"/>
    <RelativeLayout
        android:id="@+id/resumen_condominio_contenedor_antiguedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resumen_condominio_nombre"
        android:layout_alignStart="@+id/resumen_condominio_nombre"
        android:layout_below="@+id/resumen_condominio_tipo_de_condominio"
        android:layout_marginTop="12sp">
        <TextView
            android:id="@+id/resumen_condominio_etiqueta_antiguedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen_condominio_etiqueta_antiguedad"/>
        <TextView
            android:id="@+id/resumen_condominio_antiguedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/resumen_condominio_etiqueta_antiguedad"
            android:layout_toEndOf="@+id/resumen_condominio_etiqueta_antiguedad"
            android:layout_toRightOf="@+id/resumen_condominio_etiqueta_antiguedad"
            android:layout_marginStart="12sp"
            android:layout_marginLeft="12sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/resumen_condominio_etiqueta_antiguedad"
            android:layout_toEndOf="@+id/resumen_condominio_antiguedad"
            android:layout_toRightOf="@+id/resumen_condominio_antiguedad"
            android:layout_marginStart="12sp"
            android:layout_marginLeft="12sp"
            android:text="@string/resumen_condominio_antiguedad_tail"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/resumen_condominio_contenedor_inmoviliaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resumen_condominio_contenedor_antiguedad"
        android:layout_alignStart="@+id/resumen_condominio_nombre"
        android:layout_alignLeft="@+id/resumen_condominio_nombre"
        android:layout_marginTop="12sp">
        <TextView
            android:id="@+id/resumen_condominio_etiqueta_inmoviliaria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen_condominio_etiqueta_inmoviliaria"/>
        <TextView
            android:id="@+id/resumen_condominio_inmoviliaria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/resumen_condominio_etiqueta_inmoviliaria"
            android:layout_toRightOf="@+id/resumen_condominio_etiqueta_inmoviliaria"
            android:layout_marginStart="12sp"
            android:layout_marginLeft="12sp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <TableLayout
        android:id="@+id/resumen_condominio_contenedor_de_opciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/resumen_condominio_nombre"
        android:layout_alignLeft="@+id/resumen_condominio_nombre"
        android:layout_below="@+id/resumen_condominio_contenedor_inmoviliaria">
        <TableRow>
            <CheckBox
                android:id="@+id/resumen_condominio_posee_sala_de_juntas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/resumen_condominio_posee_sala_de_juntas"/>
            <CheckBox
                android:id="@+id/resumen_condominio_posee_gym"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/resumen_condominio_posee_gym"/>
            <CheckBox
                android:id="@+id/resumen_condominio_posee_espacio_recreativo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/resumen_condominio_posee_espacio_recreativo"/>
        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/resumen_condominio_posee_espacio_cultural"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/resumen_condominio_posee_espacio_cultural"/>
            <CheckBox
                android:id="@+id/resumen_condominio_posee_oficinas_administrativas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/resumen_condominio_posee_oficinas_administrativas"/>
            <CheckBox
                android:id="@+id/resumen_condominio_posee_alarma_sismica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resumen_condominio_posee_alarma_sismica"/>
        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/resumen_condominio_posee_cisterna_agua_pluvial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/resumen_condominio_posee_cisterna_agua_pluvial"/>
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:id="@+id/resumen_condominio_contenedor_estacionamiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resumen_condominio_contenedor_de_opciones"
        android:layout_marginTop="20sp"
        android:layout_alignStart="@+id/resumen_condominio_nombre"
        android:layout_alignLeft="@+id/resumen_condominio_nombre">
        <TextView
            android:id="@+id/resumen_condominio_etiqueta_cantidad_lugares_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen_condominio_cantidad_cajones_estacionamiento"/>
        <TextView
            android:id="@+id/resumen_condominio_cantidad_lugares_estacionamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/resumen_condominio_etiqueta_cantidad_lugares_estacionamiento"
            android:layout_toRightOf="@+id/resumen_condominio_etiqueta_cantidad_lugares_estacionamiento"
            android:layout_marginStart="12sp"
            android:layout_marginLeft="12sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/resumen_condominio_cantidad_lugares_estacionamiento"
            android:layout_toRightOf="@+id/resumen_condominio_cantidad_lugares_estacionamiento"
            android:layout_marginStart="12sp"
            android:layout_marginLeft="12sp"
            android:text="@string/resumen_condominio_cantidad_lugares_estacionamiento_tail"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/resumen_condominio_contenedor_estacionamiento_visitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/resumen_condominio_nombre"
        android:layout_alignLeft="@+id/resumen_condominio_nombre"
        android:layout_below="@+id/resumen_condominio_contenedor_estacionamiento"
        android:layout_marginTop="12sp">
        <TextView
            android:id="@+id/resumen_condominio_etiqueta_cantidad_lugares_estacionamiento_visitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen_condominio_cantidad_de_lugares_estacionamiento_visitas"/>
        <TextView
            android:id="@+id/resumen_condominio_cantidad_lugares_estacionamiento_visitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/resumen_condominio_etiqueta_cantidad_lugares_estacionamiento_visitas"
            android:layout_toRightOf="@+id/resumen_condominio_etiqueta_cantidad_lugares_estacionamiento_visitas"
            android:layout_marginStart="12sp"
            android:layout_marginLeft="12sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/resumen_condominio_cantidad_lugares_estacionamiento_visitas_tail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/resumen_condominio_cantidad_lugares_estacionamiento_visitas"
            android:layout_toRightOf="@+id/resumen_condominio_cantidad_lugares_estacionamiento_visitas"
            android:layout_marginStart="12sp"
            android:layout_marginLeft="12sp"
            android:text="@string/resumen_condominio_cantidad_lugares_estacionamiento_visitas_tail"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/resumen_condominio_contenedor_costo_aproximado_por_unidad_privativa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/resumen_condominio_nombre"
        android:layout_alignLeft="@+id/resumen_condominio_nombre"
        android:layout_below="@+id/resumen_condominio_contenedor_estacionamiento_visitas"
        android:layout_marginTop="12sp">
        <TextView
            android:id="@+id/resumen_condominio_etiqueta_costo_aprox_por_unidad_privativa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen_condominio_costo_aprox_por_unidad_privativa"/>
        <TextView
            android:id="@+id/resumen_condominio_costo_aprox_por_unidad_privativa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/resumen_condominio_etiqueta_costo_aprox_por_unidad_privativa"
            android:layout_toRightOf="@+id/resumen_condominio_etiqueta_costo_aprox_por_unidad_privativa"
            android:layout_marginStart="12sp"
            android:layout_marginLeft="12sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/resumen_condominio_costo_aprox_por_unidad_privativa"
            android:layout_toRightOf="@+id/resumen_condominio_costo_aprox_por_unidad_privativa"
            android:text="@string/resumen_condominio_costo_aprox_por_unidad_privativa_tail"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/resumen_condominio_contenedor_capacidad_cisterna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/resumen_condominio_nombre"
        android:layout_alignLeft="@+id/resumen_condominio_nombre"
        android:layout_marginTop="12sp"
        android:layout_below="@+id/resumen_condominio_contenedor_costo_aproximado_por_unidad_privativa">
        <TextView
            android:id="@+id/resumen_condominio_etiqueta_capacidad_cisterna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resumen_condominio_etiqueta_capacidad_cisterna"/>
        <TextView
            android:id="@+id/resumen_condominio_capacidad_cisterna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/resumen_condominio_etiqueta_capacidad_cisterna"
            android:layout_toRightOf="@+id/resumen_condominio_etiqueta_capacidad_cisterna"
            android:layout_marginStart="12sp"
            android:layout_marginLeft="12sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/resumen_condominio_capacidad_cisterna"
            android:layout_toRightOf="@+id/resumen_condominio_capacidad_cisterna"
            android:text="@string/resumen_condominio_capacidad_cisterna_tail"/>
    </RelativeLayout>

</RelativeLayout>